更改了类加载逻辑